--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <model-viewer 
     id="viewer" 
-    src="DMSO_72_1" 
+    src="DMSO_72_1.glb" 
     alt="3D mitochondrial model" 
     camera-controls 
     auto-rotate 
@@ -82,5 +82,6 @@
   </script>
 </body>
 </html>
+
 
 
