--- a/index.html
+++ b/index.html
@@ -1,63 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>3D Mitochondrial Models</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>3D Timelapse Models</title>
 
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+<!-- Google Model Viewer -->
+<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      font-family: sans-serif;
-      margin: 20px;
-    }
-    model-viewer {
-      width: 90vw;
-      max-width: 800px;
-      height: 600px;
-      margin-bottom: 20px;
-    }
-    button {
-      margin: 0 5px;
-      padding: 8px 12px;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-  </style>
+<style>
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: sans-serif;
+  margin: 20px;
+  background: #fafafa;
+}
+
+h1 {
+  margin-bottom: 15px;
+}
+
+.label {
+  font-weight: bold;
+  margin: 10px 0 5px;
+}
+
+.timepoint-buttons, .dose-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+button {
+  margin: 0 5px;
+  padding: 8px 12px;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 6px;
+  border: 2px solid #bbb;
+  background: #e6e6e6;
+  color: #222;
+}
+
+/* ACTIVE BUTTON */
+button.active {
+  background: #2563eb;
+  color: #fff;
+  border-color: #2563eb;
+}
+
+model-viewer {
+  width: 90vw;
+  max-width: 800px;
+  height: 600px;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+  border-radius: 10px;
+}
+
+@media (max-width: 768px) {
+  model-viewer {
+    height: 400px;
+  }
+  button {
+    padding: 10px 14px;
+    font-size: 1.05rem;
+  }
+}
+</style>
 </head>
-
 <body>
-  <h1>Select a 3D Mitochondrial Model</h1>
+<h1>3D Timelapse Models</h1>
 
-  <model-viewer
-    id="viewer"
-    src="DMSO_72_1.glb"
-    alt="3D mitochondrial model"
-    camera-controls
-    auto-rotate
-    shadow-intensity="1"
-    exposure="1"
-    touch-action="pan-y">
-  </model-viewer>
+<!-- Timepoint Buttons -->
+<div class="label">Timepoint</div>
+<div class="timepoint-buttons" id="timepoint-buttons"></div>
 
-  <div>
-    <button onclick="changeModel('DMSO_72_1.glb')">Model 3nm4</button>
-    <button onclick="changeModel('DMSO_72_1.glb')">Model 6nm1</button>
-    <button id="toggleTMRE">Hide TMRE</button>
-  </div>
+<!-- Dose Buttons -->
+<div class="label">Dose</div>
+<div class="dose-buttons" id="dose-buttons"></div>
+
+<!-- 3D Model Viewer -->
+<model-viewer id="viewer" src="" alt="3D model" camera-controls auto-rotate shadow-intensity="1" exposure="1" touch-action="pan-y">
+</model-viewer>
+
+<!-- TMRE Toggle -->
+<button id="toggleTMRE">Hide TMRE</button>
 
 <script>
 const viewer = document.getElementById('viewer');
+const tpButtonsDiv = document.getElementById('timepoint-buttons');
+const doseButtonsDiv = document.getElementById('dose-buttons');
+
+const timepoints = {
+  "0HR": [
+    { name: "models/DMSO_0HR.glb", label: "DMSO" },
+    { name: "models/0HR_100cis_timelapse_z.glb", label: "100 µM" },
+    { name: "models/0HR_300cis_timelapse_z.glb", label: "300 µM" }
+  ],
+  "6HR": [
+    { name: "models/DMSO_6HR.glb", label: "DMSO" },
+    { name: "models/6HR_100cis_timelapse_z.glb", label: "100 µM" },
+    { name: "models/6HR_300cis_timelapse_z.glb", label: "300 µM" }
+  ],
+  "24HR": [
+    { name: "models/DMSO_24HR.glb", label: "DMSO" },
+    { name: "models/24HR_100cis_timelapse_z.glb", label: "100 µM" },
+    { name: "models/24HR_300cis_timelapse_z.glb", label: "300 µM" }
+  ],
+  "72HR": [
+    { name: "models/DMSO_72HR.glb", label: "DMSO" },
+    { name: "models/72HR_100cis_timelapse_z.glb", label: "100 µM" },
+    { name: "models/72HR_300cis_timelapse_z.glb", label: "300 µM" }
+  ],
+  "96HR": [
+    { name: "models/DMSO_96HR.glb", label: "DMSO" },
+    { name: "models/96HR_100cis_timelapse_z.glb", label: "100 µM" },
+    { name: "models/96HR_300cis_timelapse_z.glb", label: "300 µM" }
+  ]
+};
+
+let currentTimepoint = "0HR";
+
+// TIMEPOINT BUTTONS
+Object.keys(timepoints).forEach(tp => {
+  const btn = document.createElement('button');
+  btn.textContent = tp;
+  btn.onclick = () => {
+    document.querySelectorAll('.timepoint-buttons button').forEach(b => b.classList.remove('active'));
+    btn.classList.add('active');
+    currentTimepoint = tp;
+    renderDoseButtons();
+  };
+  tpButtonsDiv.appendChild(btn);
+});
+
+// DOSE BUTTONS
+function renderDoseButtons() {
+  doseButtonsDiv.innerHTML = '';
+  timepoints[currentTimepoint].forEach((model, idx) => {
+    const btn = document.createElement('button');
+    btn.textContent = model.label;
+    btn.onclick = () => {
+      document.querySelectorAll('.dose-buttons button').forEach(b => b.classList.remove('active'));
+      btn.classList.add('active');
+      setModel(model.name);
+    };
+    if (idx === 0) btn.classList.add('active');
+    doseButtonsDiv.appendChild(btn);
+  });
+
+  setModel(timepoints[currentTimepoint][0].name);
+}
+
+function setModel(src) {
+  viewer.src = src;
+}
+
+// TMRE TOGGLE
 const TMRE_MATERIAL_NAME = 'TMRE_Mat';
 let tmreVisible = true;
 let tmreMaterials = [];
-let originalAlphas = new Map(); // store original alpha per material
+let originalAlphas = new Map();
 
-// Acquire TMRE material after model loads
 function acquireTMREMaterials() {
   if (!viewer.model) {
     requestAnimationFrame(acquireTMREMaterials);
@@ -70,14 +178,12 @@ function acquireTMREMaterials() {
   const mat = viewer.model.getMaterialByName(TMRE_MATERIAL_NAME);
   if (mat) {
     tmreMaterials.push(mat);
-    // store original alpha
     originalAlphas.set(mat, mat.pbrMetallicRoughness.baseColorFactor[3]);
   }
 
   applyTMREVisibility();
 }
 
-// Apply alpha = 0 when hiding, original alpha when showing
 function applyTMREVisibility() {
   tmreMaterials.forEach(mat => {
     const base = mat.pbrMetallicRoughness.baseColorFactor;
@@ -89,30 +195,24 @@ function applyTMREVisibility() {
       tmreVisible ? originalAlphas.get(mat) : 0
     ]);
   });
-
   viewer.requestUpdate();
 }
 
-// When a new model is loaded
 viewer.addEventListener('load', () => {
   tmreMaterials = [];
   acquireTMREMaterials();
 });
 
-// Switch models
-function changeModel(path) {
-  viewer.src = path;
-}
-
-// TMRE toggle button
 document.getElementById('toggleTMRE').addEventListener('click', () => {
   tmreVisible = !tmreVisible;
   applyTMREVisibility();
   document.getElementById('toggleTMRE').textContent =
     tmreVisible ? 'Hide TMRE' : 'Show TMRE';
 });
+
+// INITIAL STATE
+document.querySelectorAll('.timepoint-buttons button')[0].classList.add('active');
+renderDoseButtons();
 </script>
 </body>
 </html>
-
-
