--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>3D Timelapse Models</title>
+<title>3D Mitochondrial Morphology and Membrane Potential Models</title>
 
 <!-- Google Model Viewer -->
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
@@ -73,7 +73,7 @@ model-viewer {
 </style>
 </head>
 <body>
-<h1>3D Timelapse Models</h1>
+<h1>3D Mitochondrial Morphology and Membrane Potential Models</h1>
 
 <!-- Timepoint Buttons -->
 <div class="label">Timepoint</div>
@@ -216,3 +216,4 @@ renderDoseButtons();
 </script>
 </body>
 </html>
+
