--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@ button.active {
   color: #fff;
   border-color: #2563eb;
 }
-
 model-viewer {
   width: 90vw;
-  max-width: 800px;
-  height: 600px;
+  max-width: 500px;
+  aspect-ratio: 1 / 1;   /* makes it square */
+  height: auto;
   margin-bottom: 20px;
   background-color: #f0f0f0;
   border-radius: 10px;
@@ -289,4 +289,5 @@ renderDoseButtons();
 
 </body>
 </html>
+
 
